Updated index.html & Source-Code url

--- a/uimodule/webapp/index.html
+++ b/uimodule/webapp/index.html
@@ -4,10 +4,11 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="robots" content="noindex">
   <link href="" rel="shortcut icon" type="image/x-icon" />
 
 
-  <title>DSACharTool</title>
+  <title>DSA 3 Level-Up Helper</title>
 
   <script id="sap-ui-bootstrap" src="https://openui5.hana.ondemand.com/resources/sap-ui-core.js"
     data-sap-ui-theme="sap_fiori_3" data-sap-ui-resourceroots='{
